--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "firebase": "^11.8.1",
     "formik": "^2.4.6",
     "framer-motion": "latest",
     "input-otp": "1.4.1",
